Simplified #content .primary p:nth-child selector. closes #1450 - Replacing #content .primary p:nth-child(1) with .primary p:nth-child(q) - Adds .post p:nth-child(1) to avoid visual regression on blog. - Reformats some blocks for easier readability.
modified:   _sass/_va.scss

--- a/_sass/_va.scss
+++ b/_sass/_va.scss
@@ -1,5 +1,3 @@
-
-
 html {
   font-family: $font-sans;
   font-size: $em-base;
@@ -102,8 +100,8 @@ a {
 }
 
 a:visited {
-  color: #4c2c92
-  }
+  color: #4c2c92;
+}
 
 
 // Figure / Caption
@@ -280,6 +278,14 @@ h3, h4, h5, h6 {
 
   p {padding-top: 0; margin-top: 0; padding-bottom: 1em;}
 
+  p:nth-child(1) {
+    font-size: 1.25em;
+    color: $color-primary-darker;
+    letter-spacing: normal;
+    font-weight: normal;
+    padding-bottom: 1em;
+  }
+  
   h3 {
     padding: 0 0 .5em 0; font-size: 1.25em;
     @media #{$small} {font-size: 1.8em;}
@@ -386,13 +392,6 @@ h6 {font-size: 1.15em; font-weight: bold;}
     color: #333;
     font-size: 1em;
     padding-bottom: 0;
-  }
-  p:nth-child(1) {
-    font-size: 1.25em;
-    color: $color-primary-darker;
-    letter-spacing: normal;
-    font-weight: normal;
-    padding-bottom: 1em;
   }
 }
 
@@ -1154,7 +1153,15 @@ figure {
 }
 
 .post {
-  a, p, li, h1, h2, h3, h4, h5, h6, dl, dd, dt, caption, figure, blockquote {color: #444; line-height: 1.65em;}
+  a, p, p:nth-child(1), li, h1, h2, h3, h4, h5, h6, dl, dd, dt, caption, figure,   
+  blockquote {
+    color: #444; 
+    line-height: 1.65em;
+    font-size: inherit;
+  }
+  
+
+  
   a {
     text-decoration: underline;
     color: $color-primary-darker;
